--- a/src/App.scss
+++ b/src/App.scss
@@ -283,8 +283,10 @@
 }
 
 .user-icon {
-  width: 60px;
-  height: 60px;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  object-fit: cover;
 }
 .nav-user-text{
   height: 60px;
@@ -990,3 +992,16 @@ input::placeholder {
     // z-index: 2;
     // animation: moveRocket 5s linear forwards;
   }
+
+
+  /* Remove arrows in Chrome, Safari, Edge */
+.no-arrows::-webkit-inner-spin-button,
+.no-arrows::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Remove arrows in Firefox */
+.no-arrows {
+  -moz-appearance: textfield;
+}
