--- a/src/App.scss
+++ b/src/App.scss
@@ -61,6 +61,9 @@
   background-color: var(--border-gray-color);
 }
 
+.bg-gradient-color {
+        background: linear-gradient(180deg, #493495 0%, #8FD3EA 46%, #D2F1F9 69%, #EFF3F7 100%);
+    }
 // =============== Text Color ==================
 .text-blue-color {
   color: var(--text-blue);
@@ -147,6 +150,12 @@
   font-style: normal;
 }
 
+
+
+     $font-sizes: 8, 10, 12, 14, 16, 18, 20, 22, 24, 26, 28, 32, 34, 36, 40, 44, 46, 48, 52, 56, 60, 64,
+        68, 72;
+
+        $primary-color: #1a2a6c;
 /* ================ font size ================ */
 // .font-10 {
 //   font-size: 10px;
@@ -1005,3 +1014,21 @@ input::placeholder {
 .no-arrows {
   -moz-appearance: textfield;
 }
+
+//  ============================= Galaxy Dlt Button =================
+
+.dlt-modal .modal-content {
+    background: linear-gradient(45deg, #8FD3EA 20%, #3f298e 100%);
+}
+
+
+
+ .close-btn {
+            font-size: 1.5rem;
+            border: none;
+            background: none;
+            border-radius: 100%;
+            background-image: url('./assets/images/campForm/X.png');
+            cursor: pointer;
+            align-self: center;
+        }
